[project]
name = "mountaineer-exceptions"
version = "0.1.0"
description = "A small plugin for mountaineer that shows beautiful tracebacks in the browser."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mountaineer",
    "pygments>=2.19.1",
]

[tool.uv.sources]
mountaineer = { path = "../mountaineer", editable = true }

[project.scripts]
build = "mountaineer_exceptions.cli:build"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "types-pygments>=2.19.0.20250514",
]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I001", "T201"]
